--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_game_2">Game 2</string>
     <string name="action_game_3">Game 3</string>
     <string name="choose_game">Choose game</string>
+    <string name="action_game_reset">Reset</string>
 </resources>
