--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="action_game_3">Game 3</string>
     <string name="choose_game">Choose game</string>
     <string name="action_game_reset">Reset</string>
+    <string name="action_back">Back</string>
 </resources>
