--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="choose_game">Choose game</string>
     <string name="action_game_reset">Reset</string>
     <string name="action_back">Back</string>
+    <string name="current_level">Aktualny poziom</string>
 </resources>
